assets/css/home.css
/** Mixins */
/** Colors */
/** Config  */
.m-featured-slider.swiper {
  position: relative;
  overflow: hidden !important;
  height: 350px;
  margin: -40px -20px 40px;
  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
}
@media only screen and (min-width: 48rem) {
  .m-featured-slider.swiper:hover {
    transform: translateY(-5px);
    box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
  }
}
@media only screen and (min-width: 48rem) {
  .m-featured-slider.swiper {
    width: 100%;
    height: 420px;
    margin: -40px 10px 20px 10px;
    border-radius: 10px;
  }
}
@media only screen and (min-width: 64rem) {
  .m-featured-slider.swiper {
    width: calc(100% - (100% / 3) - 40px);
    margin: 0 20px 40px 20px;
    overflow: unset;
  }
}

.m-featured-slider:not(:root:root) {
  overflow: hidden !important;
}

.m-featured-slider__list {
  list-style-type: none;
  padding: 0;
  margin: 0;
  height: 100%;
}
@media only screen and (min-width: 48rem) {
  .m-featured-slider__list {
    border-radius: 10px;
  }
}

.m-featured-slider__list__item {
  height: 100%;
  overflow: hidden;
}
@media only screen and (min-width: 48rem) {
  .m-featured-slider__list__item {
    border-radius: 10px;
  }
}

.m-featured-article {
  position: relative;
  height: 100%;
  overflow: hidden;
  background-color: var(--primary-subtle-color);
  z-index: 1;
}
.m-featured-article:hover .m-featured-article__author {
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 0 0 transparent;
}
.m-featured-article.no-picture .m-featured-article__picture {
  background-color: var(--primary-subtle-color);
}

.m-featured-article__picture {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #000;
  z-index: 1;
}
.m-featured-article__picture div {
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  opacity: 0.7;
}

.m-featured-article__meta {
  position: absolute;
  top: 20px;
  left: 20px;
  z-index: 4;
}
@media only screen and (min-width: 48rem) {
  .m-featured-article__meta {
    top: 40px;
    left: 40px;
  }
}

.rtl .m-featured-article__meta {
  left: auto;
  right: 20px;
}
@media only screen and (min-width: 48rem) {
  .rtl .m-featured-article__meta {
    left: auto;
    right: 40px;
  }
}

.m-featured-article__author {
  display: block;
  width: 35px;
  height: 35px;
  background-color: #fff;
  border: 2px solid #fff;
  border-radius: 50%;
  margin-bottom: 20px;
  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
}
.m-featured-article__author div {
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  border-radius: 50%;
}

.m-featured-article__tag {
  color: #fff;
  letter-spacing: 0.3px;
  font-weight: 700;
  font-size: 1rem;
}

.m-featured-article__ribbon {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 26px;
  right: 20px;
  width: 24px;
  height: 24px;
  color: #000;
  background-color: #fff;
  border-radius: 50%;
  z-index: 2;
}
@media only screen and (min-width: 48rem) {
  .m-featured-article__ribbon {
    justify-content: flex-start;
    top: 47px;
    right: 40px;
    width: auto;
    height: 22px;
    padding: 0 7px;
    font-size: 0.875rem;
    font-weight: 600;
    border-radius: 15px;
  }
}
.m-featured-article__ribbon span {
  display: inline-block;
}
@media only screen and (min-width: 48rem) {
  .m-featured-article__ribbon span:first-of-type {
    font-size: 0.75rem;
    margin-right: 4px;
  }
}
.m-featured-article__ribbon span:last-of-type {
  display: none;
}
@media only screen and (min-width: 48rem) {
  .m-featured-article__ribbon span:last-of-type {
    display: block;
  }
}

.rtl .m-featured-article__ribbon {
  right: auto;
  left: 20px;
}
@media only screen and (min-width: 48rem) {
  .rtl .m-featured-article__ribbon {
    right: auto;
    left: 40px;
  }
}
@media only screen and (min-width: 48rem) {
  .rtl .m-featured-article__ribbon span:first-of-type {
    margin-right: 0;
    margin-left: 4px;
  }
}

.m-featured-article__content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: 100%;
  padding: 120px 20px 20px 20px;
  position: relative;
  z-index: 3;
}
@media only screen and (min-width: 48rem) {
  .m-featured-article__content {
    padding: 125px 40px 40px 40px;
  }
}

.m-featured-article__title {
  color: #fff;
  letter-spacing: 0.4px;
  line-height: 1.3;
  font-size: 1.625rem;
  font-weight: 600;
  margin: 0;
}
@media only screen and (min-width: 48rem) {
  .m-featured-article__title {
    letter-spacing: 0.5px;
    font-size: 2.25em;
    max-width: 80%;
  }
}

.m-featured-article__timestamp {
  display: flex;
  align-items: center;
  color: #fff;
  letter-spacing: 0.2px;
  font-size: 0.875rem;
}
.m-featured-article__timestamp span:nth-child(2) {
  padding: 0 10px;
}

.section-newsletter__flex {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0px 20px 20px 20px;
}

.section-newsletter {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  flex-direction: column;
  width: 400px;
  height: 310px;
  border-radius: 16px;
  background-color: #0B111C;
  text-align: center;
}
@media only screen and (min-width: 48rem) {
  .section-newsletter {
    width: 760px;
  }
}
@media only screen and (min-width: 64rem) {
  .section-newsletter {
    width: 900px;
  }
}
.section-newsletter .filled__blue {
  margin-top: 0px;
  margin-left: 14px;
}

.section-newsletter-form-container {
  position: relative;
  display: flex;
  padding-top: 33px;
}

.newsletter-input {
  width: 173px;
  height: 50px;
  border: none;
  outline: none;
  color: #CACACA;
  border-radius: 6px;
  padding: 13px 13px 13px 13px;
  background-color: #141D2E;
}
@media only screen and (min-width: 48rem) {
  .newsletter-input {
    width: 346px;
  }
}

.newsletter-input:focus {
  color: #dadada;
}

.section-newsletter h1 {
  color: #fff !important;
  font-family: "Poppins", "Source Sans Pro", Helvetica, Arial, sans-serif;
  letter-spacing: -0.035em;
  line-height: 27px;
  font-size: 18px;
  font-weight: 600;
  margin-top: 0;
}

.section-newsletter .section-newsletter-description {
  color: white;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  text-align: center;
  letter-spacing: -0.035em;
  margin-top: 6px;
}

.section-newsletter-form .success-message {
  display: none;
}

.section-newsletter-form .error-message {
  display: none;
}

.section-newsletter-form .invalid-message {
  display: none;
}

.section-newsletter-form.error .error-message,
.section-newsletter-form.success .success-message,
.section-newsletter-form.invalid .invalid-message {
  display: block;
}

.section-newsletter-form .invalid-message {
  display: none;
}

